test/spec_vectors/simd_i8x16_arith/fail/module_3.wat
(module (func (result v128) (i8x16.sub (i32.const 0) (f32.const 0.0))))